added prescreen tool gif in images folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,13 +32,13 @@
         <div class="input-field col s4">
             <label for="s1"><b>Symptom-1</b></label>
             <br>
-          <input id="s1" name="Symptom1" placeholder="fatigue"  type="text" class="validate">
+          <input id="s1" name="Symptom1" placeholder="swelling of stomach"  type="text" class="validate">
         </div>
         <div class="input-field col s4">
 
           <label for="s2"><b> Symptom-2</b></label>
             <br>
-          <input id="s2" name="Symptom2" placeholder="back_pain"  type="text" class="validate">
+          <input id="s2" name="Symptom2" placeholder="painful walking"  type="text" class="validate">
         </div>
 
         <div class="input-field col s4">
